Change event filters to support location and group slugs
